  logs for tasks with "hrev" status, and as usual it will convert the status
  to "wip" for that particular task.
* **Update:** ``views.time_log.delete_time_log()`` now doesn't allow to delete
  time logs of a completed task.
* **Update:** ``views.task.request_revision()`` now adds the revision
  description as a comment to the tickets which have the revised task in their
  links list.

0.1.5
=====

* **New:** Added a new status called "Ready To Start | RTS" which sits in
  between NEW and WIP. Any newly created task will have its status set to RTS
  if no dependencies has given. If there are dependencies and not all of them
  are in "Complete | CMPL" status, then the newly created tasks status will be
  NEW, otherwise its status will be RTS. And the status of all the dependent
  tasks will be updated on any review has been made to a task.
* **Fix:** Fixed ``GanttGrid.js`` where the event argument was not set for
  right arrow and down arrow key functions.
* **Fix:** A bug is fixed in ``views.entity.submit_search()`` and
  ``views.entity.list_search_result()`` views.
* **Update:** The tjp ids in the error messages of TaskJuggler are now replaced
  with correct links to the related task.

0.1.4
=====

* **New:** Added "Create" button to ``view_ticket.jinja2`` template. So it is
  now possible to create a new ticket using the dialog.
* **Fix:** Fixed "Asset", "Shot", "Sequence" menu entries under "Create" sub
  menu under "Actions" menu in ``list_tasks.jinja2`` template.
* **Fix:** Fixed "Create" button address in ``list_entity_assets.jinja2``,
  ``list_entity_shots.jinja2`` and ``list_entity_sequences.jinja2`` templates.
* **Update:** Removed schedule related fields from Task Dialog when the entity
  type is Asset, Shot or Sequence.
* **Fix:** Replaced "?came_from=" statements with proper "_query()" arguments
  in several templates.
* **New:** Link statuses are now shown in ``view_ticket.jinja2`` if the link is
  a Task derivative.