@@ -15,6 +15,8 @@ Stalker Pyramid Changes
 * **Update:** ``views.task.request_revision()`` now adds the revision
   description as a comment to the tickets which have the revised task in their
   links list.
+* **Update:** ``views.task.request_review()`` now updates the related ticket if
+  this is not the first review requested for the task.
 
 0.1.5
 =====
